Blood_Cell_Cancer_Prediction_Capstone_1/etc/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: serving-gateway-blood-cell-model
  labels:
    app: serving-gateway-blood-cell-model
spec:
  replicas: 1
  selector:
    matchLabels:
      app: serving-gateway-blood-cell-model
  template:
    metadata:
      labels:
        app: serving-gateway-blood-cell-model
    spec:
      containers:
      - name: serving-gateway-blood-cell-model
        image: aletbm/serving-gateway-blood-cell-model:latest
        ports:
        - containerPort: 9696
