Blood_Cell_Cancer_Prediction_Capstone_1/etc/model-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tf-serving-blood-cell-model
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tf-serving-blood-cell-model
      version: v01
  template:
    metadata:
      labels:
        app: tf-serving-blood-cell-model
        version: v01
    spec:
      containers:
      - name: tf-serving-blood-cell-model
        image: aletbm/tf-serving-blood-cell-model:latest
        ports:
        - containerPort: 8500
