Blood_Cell_Cancer_Prediction_Capstone_1/etc/model-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tf-serving-blood-cell-model
  labels:
    app: tf-serving-blood-cell-model
spec:
  ports:
    - port: 8500
      targetPort: 8500
      protocol: TCP
      name: http
  selector:
    app: tf-serving-blood-cell-model

#kubectl apply -f ./etc/model-service.yaml
